[gd_scene load_steps=13 format=2]

[ext_resource path="res://scripts/GUI.gd" type="Script" id=1]
[ext_resource path="res://fonts/small.tres" type="DynamicFont" id=2]
[ext_resource path="res://fonts/title.tres" type="DynamicFont" id=3]
[ext_resource path="res://sprites/restart.png" type="Texture" id=4]
[ext_resource path="res://sprites/home.png" type="Texture" id=5]
[ext_resource path="res://sprites/roses.png" type="Texture" id=6]
[ext_resource path="res://objects/LevelIntro.tscn" type="PackedScene" id=7]
[ext_resource path="res://objects/Shader.tscn" type="PackedScene" id=8]

[sub_resource type="InputEventAction" id=1]
action = "gui_rest"

[sub_resource type="ShortCut" id=2]
shortcut = SubResource( 1 )

[sub_resource type="InputEventAction" id=3]
action = "gui_tohome"

[sub_resource type="ShortCut" id=4]
shortcut = SubResource( 3 )

[node name="GUI" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="NextFire" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -636.0
margin_top = -30.0
margin_right = 636.0
margin_bottom = -8.0
custom_fonts/font = ExtResource( 2 )
align = 1
valign = 2

[node name="BigMessage" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 3 )
align = 1
valign = 1
autowrap = true

[node name="Margin" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="HBox_Buttons" type="HBoxContainer" parent="Margin"]
margin_left = 10.0
margin_top = 10.0
margin_right = 1270.0
margin_bottom = 710.0
custom_constants/separation = 10
alignment = 2

[node name="ResetButton" type="TextureButton" parent="Margin/HBox_Buttons"]
margin_left = 1122.0
margin_right = 1186.0
margin_bottom = 700.0
rect_min_size = Vector2( 64, 64 )
shortcut = SubResource( 2 )
texture_normal = ExtResource( 4 )
expand = true
stretch_mode = 4

[node name="MenuButton" type="TextureButton" parent="Margin/HBox_Buttons"]
margin_left = 1196.0
margin_right = 1260.0
margin_bottom = 700.0
rect_min_size = Vector2( 64, 64 )
shortcut = SubResource( 4 )
texture_normal = ExtResource( 5 )
expand = true
stretch_mode = 4

[node name="Roses" type="TextureRect" parent="Margin"]
visible = false
margin_left = 10.0
margin_top = 10.0
margin_right = 74.0
margin_bottom = 74.0
rect_min_size = Vector2( 64, 64 )
size_flags_horizontal = 0
size_flags_vertical = 0
texture = ExtResource( 6 )
stretch_mode = 5

[node name="LevelIntro" parent="." instance=ExtResource( 7 )]

[node name="Shader" parent="." instance=ExtResource( 8 )]
visible = false
z_as_relative = true

[connection signal="pressed" from="Margin/HBox_Buttons/ResetButton" to="." method="reset"]
[connection signal="pressed" from="Margin/HBox_Buttons/MenuButton" to="." method="menu"]
